force-app/main/default/objects/Household__c/Household__c.object-meta.xml
<CustomObject>
    <label>Household</label>
    <nameField>
        <displayFormat>SO-{0000}</displayFormat>
        <label>Household Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Households</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>