force-app/main/default/objects/Household__c/fields/Child_Household_Member__c.field-meta.xml
<CustomField>
    <fullName>Child_Household_Member__c</fullName>
    <label>Child/Household Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Household Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>