force-app/main/default/objects/Household__c/fields/Ethnicity_Hispanic__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity_Hispanic__c</fullName>
    <label>Ethnicity Hispanic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unable to Determine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>