force-app/main/default/objects/Household__c/fields/Household_Verified__c.field-meta.xml
<CustomField>
    <fullName>Household_Verified__c</fullName>
    <formula>NOT(ISBLANK(TEXT(Related_To__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verified, If filled the related to field.</inlineHelpText>
    <label>Verified(Filled Related To)</label>
    <type>Checkbox</type>
</CustomField>