force-app/main/default/objects/Household__c/fields/Primary_Race__c.field-meta.xml
<CustomField>
    <fullName>Primary_Race__c</fullName>
    <label>Primary Race</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Black/African-American</fullName>
            </value>
            <value>
                <fullName>Alaskan Native</fullName>
            </value>
            <value>
                <fullName>American Indian</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>White/Caucasian</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian/Pacific Islander</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>