force-app/main/default/objects/Household__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <formula>NOT(ISBLANK(Date_of_Birth__c)) &amp;&amp;  NOT(ISBLANK(Age__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verified, If filled the date of birth and age.</inlineHelpText>
    <label>Verified(Filled  date of birth and age).</label>
    <type>Checkbox</type>
</CustomField>