force-app/main/default/objects/Household__c/validationRules/Check_Primary_Race.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Primary_Race</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Primary_Race__c)) &amp;&amp; NOT(ISBLANK(Secondary_Race__c ))</errorConditionFormula>
    <errorDisplayField>Primary_Race__c</errorDisplayField>
    <errorMessage>When &apos;Primary Race&apos; is declined,Selection of Secondary Race should not be allowed.</errorMessage>
</ValidationRule>