force-app/main/default/objects/Household__c/validationRules/Format_Type_Of_SSN.validationRule-meta.xml
<ValidationRule>
    <fullName>Format_Type_Of_SSN</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( SSN__c )) , NOT(REGEX(SSN__c, &quot;[0-9]{3}-[0-9]{2}-[0-9]{4}&quot;)))</errorConditionFormula>
    <errorDisplayField>SSN__c</errorDisplayField>
    <errorMessage>SSN should be in following format XXX-XX-XXXX</errorMessage>
</ValidationRule>